Fix Gutenberg wide alignment CSS on tablet

--- a/assets/css/admin/editor-rtl.css
+++ b/assets/css/admin/editor-rtl.css
@@ -410,6 +410,13 @@ svg {
 	margin-left: calc( -0.5 * 1140px + 50%);
 }
 
+@media screen and (max-width: 1140px) {
+	.suki-content-layout-narrow .alignwide {
+		margin-right: calc( -50vw + 50%);
+		margin-left: calc( -50vw + 50%);
+	}
+}
+
 .alignwide img {
 	width: 100%;
 }
