--- a/assets/scss/_gutenberg.scss
+++ b/assets/scss/_gutenberg.scss
@@ -8,6 +8,11 @@
 		max-width: 100vw;
 		margin-left: calc( -0.5 * 1140px + 50% ); // default
 		margin-right: calc( -0.5 * 1140px + 50% ); // default
+
+		@media screen and (max-width: 1140px) {
+			margin-left: calc( -50vw + 50% ); // default
+			margin-right: calc( -50vw + 50% ); // default
+		}
 	}
 
 	img {
@@ -20,8 +25,8 @@
 	.suki-content-layout-wide & {
 		width: 100vw;
 		max-width: 100vw;
-		margin-left: calc( -50vw + 50% );
-		margin-right: calc( -50vw + 50% );
+		margin-left: calc( -50vw + 50% ); // default
+		margin-right: calc( -50vw + 50% ); // default
 
 		body.suki-page-layout-boxed & {
 			width: 1400px; // default
